Menambahkan file font woff2 (Montserrat & M PLUS 1 Code), memperbaiki image width baca materi, menambahkan @font-face di base.css, menambahkan content di halaman materi dan mata-kuliah

--- a/app/index.html
+++ b/app/index.html
@@ -49,6 +49,11 @@
 
 
             </div>
+
+            <div class="content-code">int day = 4;<br>switch (day) {<br>&ensp;case
+                1:<br>&ensp;&ensp;System.out.println("Monday");<br>&ensp;&ensp;break;<br>&ensp;case
+                2:<br>&ensp;&ensp;System.out.println("Tuesday");
+            </div>
         </div>
         <!-- ===================== END CONTENT ===================== -->
 
@@ -56,7 +61,7 @@
         <!-- ===================== FOOTER ===================== -->
         <div id="footer"></div>
         <!-- ===================== END FOOTER ===================== -->
-        <script src="https://unpkg.com/@plant/plant@2.4.0/dist/plant.js"></script>
+        <!-- <script src="https://unpkg.com/@plant/plant@2.4.0/dist/plant.js"></script> -->
         <script type="text/javascript" src="../assets/script/script.js"></script>
 
     </div>
