--- a/app/mata-kuliah.html
+++ b/app/mata-kuliah.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,33 +12,142 @@
 
     <title>Halaman Materi</title>
 </head>
+
 <body>
     <!-- ===================== CONTAINER ===================== -->
     <div id="container" class="container light-mode text-montserrat">
 
         <!-- ===================== HEADER ===================== -->
-        <div id="header"></div>
+        <section id="header"></section>
         <!-- ===================== END HEADER ===================== -->
 
 
 
         <!-- ===================== CONTENT ===================== -->
-        <div id="content">
-            
-        </div>
+        <section id="content">
+
+
+            <!-- ===================== LIST MATA KULIAH ===================== -->
+            <div class="content-container">
+
+                <div class="content-list-subject">
+                    <div class="card-horizontal">
+                        <div class="card-horizontal-container">
+
+                            <div class="card-horizontal-cover">
+                                <div id="card-image" class="card-horizontal-image bg-accent-color"></div>
+                            </div>
+
+                            <div class="card-horizontal-info">
+                                <span class="card-horizontal-title">
+                                    Struktur Data
+                                </span>
+                                <p class="card-horizontal-description opacity70">
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                                    Ipsum
+                                    has been the industry's standard dummy text ever since the 1500s, when an unknown
+                                    printer took a galley of type and scrambled it to make a type specimen book. It has
+                                    survived not only five centuries, but also the leap into electronic typesetting,
+                                    remaining essentially unchanged. It was popularised in the 1960s with the release of
+                                    Letraset sheets containing Lorem Ipsum passages, and more recently with desktop
+                                    publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                                </p>
+                                <a href="materi.html?menu=materi&mata-kuliah=" class="text-nodecoration text-bold">
+                                    <span class="button-primary-bg display-inline-block"> Lihat Materi</span>
+
+                                </a>
+                            </div>
+
+                        </div>
+                    </div>
+
+
+
+                    <div class="card-horizontal">
+                        <div class="card-horizontal-container">
+
+                            <div class="card-horizontal-cover">
+                                <div id="card-image" class="card-horizontal-image bg-accent-color"></div>
+                            </div>
+
+                            <div class="card-horizontal-info">
+                                <span class="card-horizontal-title">
+                                    Struktur Data
+                                </span>
+                                <p class="card-horizontal-description opacity70">
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                                    Ipsum
+                                    has been the industry's standard dummy text ever since the 1500s, when an unknown
+                                    printer took a galley of type and scrambled it to make a type specimen book. It has
+                                    survived not only five centuries, but also the leap into electronic typesetting,
+                                    remaining essentially unchanged. It was popularised in the 1960s with the release of
+                                    Letraset sheets containing Lorem Ipsum passages, and more recently with desktop
+                                    publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                                </p>
+                                <a href="materi.html?menu=materi&mata-kuliah=" class="text-nodecoration text-bold">
+                                    <span class="button-primary-bg display-inline-block"> Lihat Materi</span>
+
+                                </a>
+                            </div>
+
+                        </div>
+                    </div>
+
+
+                    <div class="card-horizontal">
+                        <div class="card-horizontal-container">
+
+                            <div class="card-horizontal-cover">
+                                <div id="card-image" class="card-horizontal-image bg-accent-color"></div>
+                            </div>
+
+                            <div class="card-horizontal-info">
+                                <span class="card-horizontal-title">
+                                    Struktur Data
+                                </span>
+                                <p class="card-horizontal-description opacity70">
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                                    Ipsum
+                                    has been the industry's standard dummy text ever since the 1500s, when an unknown
+                                    printer took a galley of type and scrambled it to make a type specimen book. It has
+                                    survived not only five centuries, but also the leap into electronic typesetting,
+                                    remaining essentially unchanged. It was popularised in the 1960s with the release of
+                                    Letraset sheets containing Lorem Ipsum passages, and more recently with desktop
+                                    publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                                </p>
+                                <a href="materi.html?menu=materi&mata-kuliah=" class="text-nodecoration text-bold">
+                                    <span class="button-primary-bg display-inline-block"> Lihat Materi</span>
+
+                                </a>
+                            </div>
+
+                        </div>
+                    </div>
+
+
+
+                </div>
+            </div>
+            <!-- ===================== END LIST MATA KULIAH ===================== -->
+
+
+
+
+        </section>
         <!-- ===================== END CONTENT ===================== -->
 
 
 
 
         <!-- ===================== FOOTER ===================== -->
-        <div id="footer"></div>
+        <section id="footer"></section>
         <!-- ===================== END FOOTER ===================== -->
 
-    <script type="text/javascript" src="../assets/script/script.js"></script>
-    
+        <script type="text/javascript" src="../assets/script/script.js"></script>
+
     </div>
     <!-- ===================== END CONTAINER ===================== -->
 
 </body>
+
 </html>
