Menambahkan menampilkan materi, mata kuliah secara dinamis, menambahkan default image untuk cover materi

--- a/app/baca-materi.html
+++ b/app/baca-materi.html
@@ -41,8 +41,8 @@
                         </div>
                     </div>
 
-                    <div id="material-cover-image" class="material-cover-image">
-                        <!-- <img id="material-cover-image" src="../assets/images/materi/struktur-data_struktur-data-stack_cover.jpg" alt="Cover Materi"> -->
+                    <div class="material-cover-image-default">
+                        <div id="material-cover-image" class="material-cover-image"></div>
                     </div>
                 </div>
 
