--- a/app/mata-kuliah.html
+++ b/app/mata-kuliah.html
@@ -30,38 +30,7 @@
             <!-- ===================== LIST MATA KULIAH ===================== -->
             <div class="content-container">
 
-                <div class="content-list-subject">
-                    <div class="card-horizontal">
-                        <div class="card-horizontal-container">
-
-                            <div class="card-horizontal-cover">
-                                <div id="card-image" class="card-horizontal-image bg-accent-color"></div>
-                            </div>
-
-                            <div class="card-horizontal-info">
-                                <span class="card-horizontal-title">
-                                    Struktur Data
-                                </span>
-                                <p class="card-horizontal-description opacity70">
-                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                    Ipsum
-                                    has been the industry's standard dummy text ever since the 1500s, when an unknown
-                                    printer took a galley of type and scrambled it to make a type specimen book. It has
-                                    survived not only five centuries, but also the leap into electronic typesetting,
-                                    remaining essentially unchanged. It was popularised in the 1960s with the release of
-                                    Letraset sheets containing Lorem Ipsum passages, and more recently with desktop
-                                    publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                                </p>
-                                <a href="materi.html?menu=materi&mata-kuliah=" class="text-nodecoration text-bold">
-                                    <span class="button-primary-bg display-inline-block"> Lihat Materi</span>
-
-                                </a>
-                            </div>
-
-                        </div>
-                    </div>
-
-
+                <div id="list-matkul" class="content-list-subject">
 
                     <div class="card-horizontal">
                         <div class="card-horizontal-container">
@@ -84,7 +53,8 @@
                                     Letraset sheets containing Lorem Ipsum passages, and more recently with desktop
                                     publishing software like Aldus PageMaker including versions of Lorem Ipsum.
                                 </p>
-                                <a href="materi.html?menu=materi&mata-kuliah=" class="text-nodecoration text-bold">
+                                <a href="materi.html?menu=materi&mata-kuliah=struktur-data"
+                                    class="text-nodecoration text-bold">
                                     <span class="button-primary-bg display-inline-block"> Lihat Materi</span>
 
                                 </a>
@@ -92,38 +62,6 @@
 
                         </div>
                     </div>
-
-
-                    <div class="card-horizontal">
-                        <div class="card-horizontal-container">
-
-                            <div class="card-horizontal-cover">
-                                <div id="card-image" class="card-horizontal-image bg-accent-color"></div>
-                            </div>
-
-                            <div class="card-horizontal-info">
-                                <span class="card-horizontal-title">
-                                    Struktur Data
-                                </span>
-                                <p class="card-horizontal-description opacity70">
-                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                    Ipsum
-                                    has been the industry's standard dummy text ever since the 1500s, when an unknown
-                                    printer took a galley of type and scrambled it to make a type specimen book. It has
-                                    survived not only five centuries, but also the leap into electronic typesetting,
-                                    remaining essentially unchanged. It was popularised in the 1960s with the release of
-                                    Letraset sheets containing Lorem Ipsum passages, and more recently with desktop
-                                    publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                                </p>
-                                <a href="materi.html?menu=materi&mata-kuliah=" class="text-nodecoration text-bold">
-                                    <span class="button-primary-bg display-inline-block"> Lihat Materi</span>
-
-                                </a>
-                            </div>
-
-                        </div>
-                    </div>
-
 
 
                 </div>
@@ -143,7 +81,9 @@
         <section id="footer"></section>
         <!-- ===================== END FOOTER ===================== -->
 
+        <script type="text/javascript" src="../assets/script/materi.js"></script>
         <script type="text/javascript" src="../assets/script/script.js"></script>
+        <script type="text/javascript" src="../assets/script/loadMaterial.js"></script>
 
     </div>
     <!-- ===================== END CONTAINER ===================== -->
