--- a/app/materi.html
+++ b/app/materi.html
@@ -28,102 +28,7 @@
             <div class="content-container">
                 <div class="content-material corner-round bg-gradient-color">
                     <h1 class="content-material-tag-title text-light-color">Material Tag Title</h1>
-                    <div class="content-list-material">
-
-                        <div class="card-material">
-                            <div class="container-card-material">
-                                <div class="card-material-cover">
-                                    <div class="card-material-image"></div>
-                                </div>
-                                <div class="card-material-info">
-                                    <span class="card-material-subject">Material Subject</span>
-                                    <span class="card-material-title">Material Title</span>
-                                    <p class="card-material-description">
-                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                        Ipsum has been the industry's standard dummy text ever since the 1500s, when an
-                                        unknown printer took a galley of type and scrambled it to make a type specimen
-                                        book.
-                                    </p>
-                                    <a href="baca-materi.html?menu=materi&mata-kuliah=struktur-data&materi=struktur-data-stack"
-                                        class="card-material-button display-inline-block text-nodecoration">
-                                        <div class="button-primary-bg">Baca Materi</div>
-                                    </a>
-                                </div>
-
-                            </div>
-                        </div>
-
-                        <div class="card-material">
-                            <div class="container-card-material">
-                                <div class="card-material-cover">
-                                    <div class="card-material-image"></div>
-                                </div>
-                                <div class="card-material-info">
-                                    <span class="card-material-subject">Material Subject</span>
-                                    <span class="card-material-title">Material Title</span>
-                                    <p class="card-material-description">
-                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                        Ipsum has been the industry's standard dummy text ever since the 1500s, when an
-                                        unknown printer took a galley of type and scrambled it to make a type specimen
-                                        book.
-                                    </p>
-                                    <a href="baca-materi.html?menu=materi&mata-kuliah=struktur-data&materi=struktur-data-stack"
-                                        class="card-material-button display-inline-block text-nodecoration">
-                                        <div class="button-primary-bg">Baca Materi</div>
-                                    </a>
-                                </div>
-
-                            </div>
-                        </div>
-
-                        <div class="card-material">
-                            <div class="container-card-material">
-                                <div class="card-material-cover">
-                                    <div class="card-material-image"></div>
-                                </div>
-                                <div class="card-material-info">
-                                    <span class="card-material-subject">Material Subject</span>
-                                    <span class="card-material-title">Material Title</span>
-                                    <p class="card-material-description">
-                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                        Ipsum has been the industry's standard dummy text ever since the 1500s, when an
-                                        unknown printer took a galley of type and scrambled it to make a type specimen
-                                        book.
-                                    </p>
-                                    <a href="baca-materi.html?menu=materi&mata-kuliah=struktur-data&materi=struktur-data-stack"
-                                        class="card-material-button display-inline-block text-nodecoration">
-                                        <div class="button-primary-bg">Baca Materi</div>
-                                    </a>
-                                </div>
-
-                            </div>
-                        </div>
-
-
-                        <div class="card-material">
-                            <div class="container-card-material">
-                                <div class="card-material-cover">
-                                    <div class="card-material-image"></div>
-                                </div>
-                                <div class="card-material-info">
-                                    <span class="card-material-subject">Material Subject</span>
-                                    <span class="card-material-title">Material Title</span>
-                                    <p class="card-material-description">
-                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                        Ipsum has been the industry's standard dummy text ever since the 1500s, when an
-                                        unknown printer took a galley of type and scrambled it to make a type specimen
-                                        book.
-                                    </p>
-                                    <a href="baca-materi.html?menu=materi&mata-kuliah=struktur-data&materi=struktur-data-stack"
-                                        class="card-material-button display-inline-block text-nodecoration">
-                                        <div class="button-primary-bg">Baca Materi</div>
-                                    </a>
-                                </div>
-
-                            </div>
-                        </div>
-
-
+                    <div id="list-materi" class="content-list-material">
 
                         <div class="card-material">
                             <div class="container-card-material">
@@ -164,9 +69,10 @@
         <!-- ===================== FOOTER ===================== -->
         <div id="footer"></div>
         <!-- ===================== END FOOTER ===================== -->
-
+        <script type="text/javascript" src="../assets/script/materi.js"></script>
         <script type="text/javascript" src="../assets/script/script.js"></script>
         <script type="text/javascript" src="../assets/script/loadMaterial.js"></script>
+
 
     </div>
     <!-- ===================== END CONTAINER ===================== -->
