--- a/app/kuis.html
+++ b/app/kuis.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +12,11 @@
 
     <title>Halaman Materi</title>
 </head>
+
 <body>
+    <div id="onload-page">
+        <img src="../assets/images/logo-round.svg" alt="Logo">
+    </div>
     <!-- ===================== CONTAINER ===================== -->
     <div id="container" class="container light-mode text-montserrat">
 
@@ -23,7 +28,7 @@
 
         <!-- ===================== CONTENT ===================== -->
         <div id="content">
-            
+
         </div>
         <!-- ===================== END CONTENT ===================== -->
 
@@ -34,10 +39,11 @@
         <div id="footer"></div>
         <!-- ===================== END FOOTER ===================== -->
 
-    <script type="text/javascript" src="../assets/script/script.js"></script>
-    
+        <script type="text/javascript" src="../assets/script/script.js"></script>
+
     </div>
     <!-- ===================== END CONTAINER ===================== -->
 
 </body>
+
 </html>
