--- a/app/materi.html
+++ b/app/materi.html
@@ -14,6 +14,9 @@
 </head>
 
 <body>
+    <div id="onload-page">
+        <img src="../assets/images/logo-round.svg" alt="Logo">
+    </div>
     <!-- ===================== CONTAINER ===================== -->
     <div id="container" class="container light-mode text-montserrat">
 
@@ -25,9 +28,10 @@
 
         <!-- ===================== CONTENT ===================== -->
         <div id="content">
+
             <div class="content-container">
                 <div class="content-material corner-round bg-gradient-color">
-                    <h1 class="content-material-tag-title text-light-color">Material Tag Title</h1>
+                    <h1 align="center" class="content-material-tag-title text-light-color">Daftar Materi</h1>
                     <div id="list-materi" class="content-list-material">
 
                         <div class="card-material">
