--- a/app/mata-kuliah.html
+++ b/app/mata-kuliah.html
@@ -14,6 +14,9 @@
 </head>
 
 <body>
+    <div id="onload-page">
+        <img src="../assets/images/logo-round.svg" alt="Logo">
+    </div>
     <!-- ===================== CONTAINER ===================== -->
     <div id="container" class="container light-mode text-montserrat">
 
